--- a/templates/itineraire/_btn_links.html.twig
+++ b/templates/itineraire/_btn_links.html.twig
@@ -1,6 +1,6 @@
-
-	<a href="{{ path('commande_new') }}" class="btn btn-primary">
-		Nouvelle commande</a>&nbsp;&nbsp;
-	<a href="{{ path('itineraire_index') }}" class="btn btn-primary">
-		Itineraires</a>
-
+<a href="{{ path('commande_new') }}" class="btn btn-primary">
+	Nouvelle commande</a>&nbsp;&nbsp;
+<a href="{{ path('itineraire_index') }}" class="btn btn-primary">
+	Itineraires</a>&nbsp;
+<a href="{{ path('itineraire_new') }}" class="btn btn-primary">
+	Ajouter un itineraire</a>
