--- a/templates/itineraire/_form.html.twig
+++ b/templates/itineraire/_form.html.twig
@@ -12,7 +12,10 @@
         <div class="card-body py-5">
             <div class="row">
                 <div class="col-sm-8 offset-sm-1">
+
                     {{ form_row(form.designation) }}
+
+                    {{ form_row(form.link) }}
 
                     <div class="row">
                         <div class="col-sm-7">
