--- a/templates/mails/client_mail.html.twig
+++ b/templates/mails/client_mail.html.twig
@@ -1,9 +1,9 @@
 <p>Salut
-   {{ commande.conducteur.civilite }}
+   {{ commande.client.civilite }}
 
    <strong>
-      {{ commande.conducteur.nom }}
-      {{ commande.conducteur.prenom }}
+      {{ commande.client.nom }}
+      {{ commande.client.prenom }}
    </strong>! une nouvelle commande vous à été attribuée
 </p>
 <h5>Detail de la commande:</h5>
