--- a/templates/partials/base/_sidebar.html.twig
+++ b/templates/partials/base/_sidebar.html.twig
@@ -37,17 +37,9 @@
 
 					<!-- Villes -->
 					<li>
-						<a href="{{ path('ville_index') }}" class="waves-effect">
-							<i class="mdi-24px mdi mdi-map"></i>
-							<span>Villes</span>
-						</a>
-					</li>
-
-					<!-- Secteurs -->
-					<li>
-						<a href="{{ path('secteur_index') }}" class="waves-effect">
-							<i class="mdi-24px mdi mdi-arrow-decision"></i>
-							<span>Secteurs</span>
+						<a href="{{ path('itineraire_index') }}" class="waves-effect">
+							<i class="mdi-24px mdi mdi-routes"></i>
+							<span>Itineraires</span>
 						</a>
 					</li>
 
