--- a/templates/client/show.html.twig
+++ b/templates/client/show.html.twig
@@ -198,10 +198,10 @@
                                                             <div class="col-sm-6">
                                                                 <div class="row">
                                                                     <div class="col-sm-6">
-                                                                        {{ client.editionStartAt }}
+                                                                        {{ client.editionStartAt|date('d/m/Y') }}
                                                                     </div>
                                                                     <div class="col-sm-6">
-                                                                        {{ client.editionEndAt }}
+                                                                        {{ client.editionEndAt|date('d/m/Y') }}
                                                                     </div>
                                                                 </div>
                                                             </div>
