--- a/templates/dashboard/home.html.twig
+++ b/templates/dashboard/home.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Tableau de bord
-{% endblock %}
+{% block title %} Tableau de bord {% endblock %}
 
 {% block body %}
+
 <div class="row">
 	<!-- end col -->
 	<div class="col-sm-6 col-xl-4">
