--- a/templates/factures/_facture_client.html.twig
+++ b/templates/factures/_facture_client.html.twig
@@ -67,7 +67,7 @@
 				<td>{{ commande.dateReception|date('d/m/Y') }}</td>
 				<td>{{ commande.dateReception|date('d/m/Y') }}</td>
 				<td>
-					{% for itineraire in commande.itineraires %}
+					{% for itineraire in commande.client.itineraires %}
 						<table style="border: 1px solid rgb(192, 192, 192);width: 100%;">
 							<thead style="background: rgb(146, 248, 146);">
 								<tr>
