Edition du formulaire de commandes, ajout des destinations

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -101,11 +101,11 @@
 				margin: 10px 0;
 			}
 			.ts-control .item {
-				/*background: #1f3c4d !important;*/
-				background: rgb(179, 179, 179)!important;
-				font-size: .9em!important;
-				border: transparent!important;
-				color: black !important;
+				background: #1f3c4d !important;
+				background: #1f3c4d !important;
+				font-size: .8em!important;
+				border: transparent !important;
+				color: white !important;
 			}
 			.btn-toolbar{
 				display: none!important;
